--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img src="animation/spritesheet.png" id="bird">
-    <img src="animation/WinterTileset/png/BG/BG.png" id="background">
+    <img src="./BG.png" id="background">
 </body>
 <script src="index.js"></script>
 </html>
